SDPA-5842 - Fixed file upload button causing content shift

--- a/src/static/css/openforms.css
+++ b/src/static/css/openforms.css
@@ -900,6 +900,7 @@ select option:hover {
 button.of-file-upload-button,
 button.of-file-upload-button:active {
     margin-bottom: 15px;
+    margin-top: 0;
 }
 
 .dropzone {
